<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="school.ben.csci_3130_a2.MainActivity">

    <TextView
        android:id="@+id/feedback"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Validate"
        app:layout_constraintVertical_bias="0.086"
        tools:textAlignment="center"
        tools:textSize="40px"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/btn_Validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="VALIDATE"
        android:onClick="btn_ValidatePress"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_input"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/feedback"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/txt_input"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:hint="Enter password here"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="223dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

</android.support.constraint.ConstraintLayout>
